ok componente y page login

--- a/church-ae-war/web/resources/layout/template.xhtml
+++ b/church-ae-war/web/resources/layout/template.xhtml
@@ -55,7 +55,7 @@
                 });
             </script>
             
-            
+            <p:growl autoUpdate="true" > </p:growl>
             
             <ui:include src="topbar.xhtml"></ui:include> 
             
