--- a/church-ae-war/web/resources/components/dataTable.xhtml
+++ b/church-ae-war/web/resources/components/dataTable.xhtml
@@ -83,7 +83,7 @@
             <ui:insert />
         </ae:context>
 
-        <p:column sortBy="#{row.created}" headerText="Fecha creación" rendered="#{auditable}" width="130">
+        <p:column sortBy="#{row.created}" headerText="Creación" rendered="#{auditable}" width="130">
             <h:outputText value="#{row.created}">
                 <f:convertDateTime pattern="dd-MM-yyyy HH:mm:ss" type="both" />
             </h:outputText>
@@ -93,13 +93,13 @@
             <h:outputText value="#{row.createdby}" />
         </p:column>
 
-        <p:column sortBy="#{row.updated}" headerText="Fecha actualización" rendered="#{auditable}" width="130">
+        <p:column sortBy="#{row.updated}" headerText="Actualización" rendered="#{auditable}" width="130">
             <h:outputText value="#{row.updated}">
                 <f:convertDateTime pattern="dd-MM-yyyy HH:mm:ss" type="both" />
             </h:outputText>
         </p:column>
 
-        <p:column sortBy="#{row.updatedby}" headerText="Actualizado por" rendered="#{auditable}" width="120">
+        <p:column sortBy="#{row.updatedby}" headerText="Actualizado por" rendered="#{auditable}" width="140">
             <h:outputText value="#{row.updatedby}" />
         </p:column> 
         
