cambios para encriptar con common codec

--- a/church-ae-war/web/resources/layout/layoutmenu.xhtml
+++ b/church-ae-war/web/resources/layout/layoutmenu.xhtml
@@ -18,7 +18,7 @@
                 <p:menuitem id="red_geometric" value="Red" icon="icon-colorize" url="#" onclick="$('body').attr('class','').addClass('RedModena Geometry');"/>
             </p:submenu>
             <p:submenu id="smAdmin" label="Administración" icon="icon-settings_applications">
-                <p:menuitem id="miUsuarios" value="Usuarios" icon="fa-user" action="/pages/administrator/ad_users?faces-redirect=true"/>
+                <p:menuitem id="miUsuarios" value="Usuarios" icon="fa fa-user" action="/pages/administrator/ad_users?faces-redirect=true"/>
             </p:submenu>
             <p:submenu id="rm_theme" label="Modena Theme" icon="icon-format_color_fill">
                 <p:menuitem id="rm_forms" value="Form Elements" icon="icon-paper" outcome="/home"/>
